fix file title overflow

--- a/src/pages/main-page/file-dropzone/file-preview/file-preview.module.css
+++ b/src/pages/main-page/file-dropzone/file-preview/file-preview.module.css
@@ -30,6 +30,7 @@
     font-size: 16px;
     line-height: 100%;
     color: #ffffff;
+    word-break: break-all;
   }
 
   .info__subtitle {
